--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^24.10.0",
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
     "commander": "^14.0.2",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
